--- a/arches_hip/templates/views/reports/HERITAGE_RESOURCE_GROUP.E27.htm
+++ b/arches_hip/templates/views/reports/HERITAGE_RESOURCE_GROUP.E27.htm
@@ -29,7 +29,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             <div class="hidden-sm hidden-xs col-sm-8">
                 <h1 class="pull-left arches-breadcrumb-title"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
                 {% if user_can_edit == True %}
-                    <a href="{% url 'resource_manager' report_info.source.entitytypeid 'summary' report_info.source.entityid %}" class="info-link edit-link report-header-link">
+                    <a href="{% url 'resource_manager' report_info.source.entitytypeid 'default' report_info.source.entityid %}" class="info-link edit-link report-header-link">
                         <i class="arches-search-link fa fa-edit"></i><span class="arches-search-link">{% trans 'Edit' %}</span>
                     </a>
                 {% endif %}
@@ -52,7 +52,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     {% if user_can_edit == True %}
                     <li>
                         <i class="arches-search-link fa fa-edit"></i>
-                        <a href="{% url 'resource_manager' report_info.source.entitytypeid 'summary' report_info.source.entityid %}" class="info-link edit-link"><span class="arches-search-link">{% trans 'Edit' %}</span></a>
+                        <a href="{% url 'resource_manager' report_info.source.entitytypeid 'default' report_info.source.entityid %}" class="info-link edit-link"><span class="arches-search-link">{% trans 'Edit' %}</span></a>
                     </li>
                     {% endif %}
                     
