--- a/arches_hip/templates/views/reports/sections/PLACE_ADDRESS.E45.htm
+++ b/arches_hip/templates/views/reports/sections/PLACE_ADDRESS.E45.htm
@@ -2,24 +2,20 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="">
-            <dl>
+            <dl class="report-item-list">
                 <dt>
                     <h5 id="" class="arches-report-subsection-title">{% trans "Addresses" %}</h5>
                 </dt>
 
-                {% if 'PLACE_E53' not in report_info.source.graph %}
-                    <dd class="arches-report-subsection-item">
-                        {% trans "No addresses recorded" %}
-                    </dd>
-                {% else %}
+                <dd class="arches-report-subsection-item empty-message" style="display:none;">
+                    {% trans "No addresses recorded" %}
+                </dd>
+
+                {% if 'PLACE_E53' in report_info.source.graph %}
                     {% for PLACE_E53 in report_info.source.graph.PLACE_E53 %}
-                        {% if 'PLACE_ADDRESS_E45' not in PLACE_E53 %}
-                            <dd class="arches-report-subsection-item">
-                                {% trans "No addresses recorded" %}
-                            </dd>
-                        {% else %}
+                        {% if 'PLACE_ADDRESS_E45' in PLACE_E53 %}
                             {% for PLACE_ADDRESS_E45 in PLACE_E53.PLACE_ADDRESS_E45 %}
-                                <dd class="arches-report-subsection-item">
+                                <dd class="arches-report-subsection-item report-list-item">
                                     {{PLACE_ADDRESS_E45.PLACE_ADDRESS_E45__value}}
                                     <span class="arches-report-subsection-item-type">
                                         {{PLACE_ADDRESS_E45.ADDRESS_TYPE_E55__value}}
