--- a/arches_hip/templates/views/reports/sections/DESCRIPTION_OF_LOCATION.E62.htm
+++ b/arches_hip/templates/views/reports/sections/DESCRIPTION_OF_LOCATION.E62.htm
@@ -30,7 +30,7 @@
                                         </dd>
                                     {% else %}
                                         <dd class="arches-report-subsection-item">
-                                            {{DESCRIPTION_OF_LOCATION_E62.DESCRIPTION_OF_LOCATION_E62__value}}
+                                            {{DESCRIPTION_OF_LOCATION_E62.DESCRIPTION_OF_LOCATION_E62__value | safe}}
                                         </dd>
                                     {% endif %}
                                 {% endfor %}   
