--- a/arches_hip/templates/views/reports/ACTOR.E39.htm
+++ b/arches_hip/templates/views/reports/ACTOR.E39.htm
@@ -19,73 +19,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 {% load staticfiles %}
 {% load i18n %}
 
-<!--=== Report Title ===-->
-<div class="breadcrumbs report-breadcrumb">
-    <div class="container">
-
-        <div class="row">
-
-            <!-- Project Name (screens small and bigger)-->
-            <div class="hidden-sm hidden-xs col-sm-8">
-                <h1 class="pull-left arches-breadcrumb-title"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
-                {% if user_can_edit == True %}
-                    <a href="{% url 'resource_manager' report_info.source.entitytypeid 'default' report_info.source.entityid %}" class="info-link edit-link report-header-link">
-                        <i class="arches-search-link fa fa-edit"></i><span class="arches-search-link">{% trans 'Edit' %}</span>
-                    </a>
-                {% endif %}
-            </div>
-
-            <!-- Project Name (screens extra small)-->
-             <div class="hidden-md hidden-lg">
-                <h1 class="arches-breadcrumb-title margin-left-15 margin-bottom-0" style="margin-top: -5px; margin-bottom: 0;"><i class="fa {{RESOURCE_TYPE_CONFIGS.icon_class}}"></i>{{ report_info.source.primaryname }}<small style="padding-left: 8px;">{{RESOURCE_TYPE_CONFIGS.name}}</small></h1>
-                <ul class="list-inline up-ul margin-left-15">
-                    <li>
-                        <i class="arches-search-link fa fa-edit"></i>
-                        <a href="#report" class="info-link related-resources-graph"><span class="arches-search-link">{% trans 'Resource Report' %}</span></a>
-                    </li>
-
-                    <li data-bind="visible: geometries().length > 0">
-                        <i class="arches-search-link fa fa-map-marker"></i>
-                        <a href="#map" class="info-link navigate-map"><span class="arches-search-link">{% trans 'Map' %}</span></a>
-                    </li>
-
-                    {% if user_can_edit == True %}
-                    <li>
-                        <i class="arches-search-link fa fa-edit"></i>
-                        <a href="{% url 'resource_manager' report_info.source.entitytypeid 'default' report_info.source.entityid %}" class="info-link edit-link"><span class="arches-search-link">{% trans 'Edit' %}</span></a>
-                    </li>
-                    {% endif %}
-
-                </ul>
-                <hr class="margin-top-minus-10 margin-bottom-10" style="border-width: 0px;">
-            </div>
-
-            <!-- <div class="col-sm-4 col-md-3 col-md-offset-1">
-
-                <div class="btn-group margin-top-5">
-
-                    <button type="button" id="report_options" class="btn btn-primary hidden-xs" style="margin-top: 5px;" data-toggle="">
-                        {% trans "Report Options" %} &nbsp;
-                        <i class="fa fa-chevron-down"></i>
-                        <span class="sr-only">Toggle Dropdown</span>                            
-                    </button>
-                    <div class="arches-report-options animated fadeIn">
-                        <ul class="arches-menu" role="menu">
-                            <li style="margin-top: 2px; margin-bottom: 2px;"><a href="#overview" class="arches-menu-item theme-close">{% trans "Overview" %}</a></li>
-                            <li><a href="#topSection2" class="arches-menu-item theme-close">{% trans "Resource Description" %}</a></li>
-                            <li class="arches-menu-divider"></li>
-                            <li><a href="#" class="arches-menu-item theme-close">{% trans "close" %}</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div> -->
-        </div>
-
-    </div>
-
-</div>
-<!--=== End Report Title ===-->
+{% include 'views/reports/title.htm' %}
 
 <!-- End Fixed Nav for Report -->
 <div id="report-body" class="report-body">
