fix display of related files in report, standardize on using the availability of the thumbnail as an indicator of an viewable image

--- a/arches_hip/templates/views/reports/INFORMATION_RESOURCE.E73.htm
+++ b/arches_hip/templates/views/reports/INFORMATION_RESOURCE.E73.htm
@@ -282,7 +282,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                                                     <!-- Links for Image Gallery Supply Image in the href, thumbnails in the img tags -->
                                                     {% for FILE_PATH_E62 in report_info.source.graph.FILE_PATH_E62 %}
 
-                                                        {% if report_info.source.display_as_image %}
+                                                        {% if 'THUMBNAIL_E62' in report_info.source.graph %}
 
                                                             <dd class="arches-report-subsection-item">
                                                                 <div id="" style="margin-top: 5px;">
