--- a/arches_hip/templates/views/forms/related-resources.htm
+++ b/arches_hip/templates/views/forms/related-resources.htm
@@ -299,7 +299,7 @@
                                             </p>
 
                                             <!-- Item Description -->
-                                            <p data-bind="text:description" class="arches-search-item-description"></p>
+                                            <p data-bind="html:description" class="arches-search-item-description"></p>
                                             <!-- End Item Description -->
 
                                         </div>
