--- a/arches_hip/templates/views/reports/HERITAGE_RESOURCE.E18.htm
+++ b/arches_hip/templates/views/reports/HERITAGE_RESOURCE.E18.htm
@@ -404,7 +404,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <!-- End Resource Description Section -->
 
 
-    {% if 'CONDITION_ASSESMENT_E14' in report_info.source.graph %}
+    {% if 'CONDITION_ASSESSMENT_E14' in report_info.source.graph %}
         {% include 'views/reports/sections/condition_assessment_section.htm' %}
     {% endif %}
 
